Bugfix: margin-top on content is too small when the media has a height of more than 800px

--- a/style.css
+++ b/style.css
@@ -119,6 +119,9 @@ h1, h2, h3, h4, h5 {
         height: 71px;
     }
 
+    .content {
+        margin-top: 71px;
+    }
 }
 
 @media (max-width: 820px) {
